removed py stuff